--- a/web_buffer.html
+++ b/web_buffer.html
@@ -98,7 +98,7 @@
           centerGeometryAtStart,
           labelGraphic;
 
-        const unit = "kilometers";
+        const unit = "meters";
 
         // Create layers
         const graphicsLayer = new GraphicsLayer({listMode:"hide"});
@@ -441,7 +441,7 @@
           labelGraphic.symbol = {
             type: "text",
             color: "#FFEB00",
-            text: length.toFixed(2) + " kilometers",
+            text: length.toFixed(2) + " meters",
             xoffset: 50,
             yoffset: 10,
             font: {
@@ -710,7 +710,7 @@
             symbol: {
               type: "text",
               color: "#FFEB00",
-              text: length.toFixed(2) + " kilometers",
+              text: length.toFixed(2) + " meters",
               xoffset: 50,
               yoffset: 10,
               font: {
