--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             // Display the chart in an Expand widget
             chartExpand = new Expand({
               expandIconClass: "esri-icon-chart",
-              expandTooltip: "Population pyramid chart",
+              expandTooltip: "防災設施點位統計圖",
               expanded: false,
               view: view,
               content: document.getElementById("chartPanel")
@@ -277,7 +277,7 @@
             // Display the Legend in an Expand widget
             const legendExpand = new Expand({
               expandIconClass:"esri-icon-legend",
-              expandTooltip: "Show Legend",
+              expandTooltip: "圖例",
               expanded: false,
               view: view,
               content: legend
@@ -325,7 +325,7 @@
 
             const layerListExpand = new Expand({
               expandIconClass: "esri-icon-layer-list",
-              expandTooltip:"Expand LayerList",
+              expandTooltip:"圖層",
               expanded:false,
               view:view,
               content:layerList
