--- a/index.html
+++ b/index.html
@@ -108,15 +108,6 @@
         });
 
         //＊＊圖層控制的layer＊＊，可刪
-        
-        const incampus = new FeatureLayer({
-          title: "校園內車道",
-          url: "https://services5.arcgis.com/yqmzFsAzBUNEIWLw/arcgis/rest/services/roadincampus/FeatureServer"
-        });
-        const offcampus = new FeatureLayer({
-          title: "校園外車道",
-          url: "https://services5.arcgis.com/yqmzFsAzBUNEIWLw/arcgis/rest/services/roadoffcampus/FeatureServer"
-        });
 
         // 改！防災設施點圖層
         const featureLayer = new FeatureLayer({
@@ -133,7 +124,7 @@
         // 改！校區建物
         const building = new FeatureLayer({
           title: "力行校區建物",
-          url: "https://services5.arcgis.com/yqmzFsAzBUNEIWLw/arcgis/rest/services/9310101%E6%B0%B8%E4%B9%85%E6%80%A7%E6%88%BF%E5%B1%8B/FeatureServer"
+          url: "https://services5.arcgis.com/yqmzFsAzBUNEIWLw/arcgis/rest/services/9310100%E6%B0%B8%E4%B9%85%E6%80%A7%E6%88%BF%E5%B1%8B_forHTML/FeatureServer"
         });
 		
         
