--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                     view.popup.open({
                       title: "Center point",
                       content:
-                        "Drag this point to move the buffer.<br/> " +
-                        "Or drag the <b>Edge</b> point to resize the buffer.",
+                        "移動中心點改變環域範圍<br/> " +
+                        "或移動<b>圓周上</b>的點改變環域距離大小",
                       location: centerGraphic.geometry
                     });
                     view.popup.alignment = "top-left";
